[package]
name = "rust-p2p-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde_json = "1.0.91"
derive_more = "0.99.17"
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.8.5"
